[package]
name = "rusttracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bytemuck = "1.14.3"
encase = "0.7.0"
pollster = { version = "0.3.0", features = ["macro"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.19.1"
winit = "0.29.10"
